test/negative/403_cons_on_nonlist.err
403_cons_on_nonlist.fx:2:23: error: '::' pattern is used with non-list type

1 errors occured during type checking.
